--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
 		<!--portfolio end -->
 
 
-		<!--Expertise start -->
-		<section id="Expertise" class="Expertise">
+		<!-- Expertise start -->
+		<!-- <section id="Expertise" class="Expertise">
 			<div class="section-heading text-center">
 				<h2>Expertise </h2>
 			</div>
@@ -688,42 +688,44 @@
 					<div class="owl-carousel owl-theme" id="client">
 						<div class="item">
 							<a href="" title="html icons"><i class="fa-icons fa-brands fa-node"></i></a>
-						</div><!--/.item-->
+						</div>
 						<div class="item">
 							<a href="#">
 								<i class=" fa-icons fa-brands fa-laravel"></i>
 							</a>
-						</div><!--/.item-->
+						</div>
 						<div class="item">
 							<a href="#">
 								<i class="fa-icons fa-brands fa-github"></i>
 							</a>
-						</div><!--/.item-->
+						</div>
 						<div class="item">
 							<a href="#">
 								<i class="fa-icons fa-brands fa-php"></i>
 							</a>
-						</div><!--/.item-->
+						</div>
 						<div class="item">
 							<a href="#">
 								<i class="fa-icons fa-solid fa-database"></i>
 							</a>
-						</div><!--/.item-->
+						</div>
 						<div class="item">
 							<a href="#">
 								<i class="fa-icons fa-brands fa-js"></i>
 							</a>
-						</div><!--/.item-->
+						</div>
 						<div class="item">
 							<a href="#">
 								<i class="fa-icons fa-solid fa-code"></i>
 							</a>
-						</div><!--/.item-->
-					</div><!--/.owl-carousel-->
-				</div><!--/.container-->
-			</div><!--/.Expertise-area-->
+						</div>
+					</div>
+				</div>
+			</div>
 
-		</section><!--/.Expertise-->
+		</section> -->
+		
+		<!--/.Expertise -->
 
 		<!-- </section>/.Expertise -->
 		<!--Expertise end -->
